--- a/templates/modules/content/_block-quick-links.twig
+++ b/templates/modules/content/_block-quick-links.twig
@@ -1,6 +1,10 @@
-{% if entry.quickLinks | length %}
-<div id="block--quick-links">
-  <h3>Quick Links</h3>
-  {% include "modules/content/_quick-links" %}
-</div>
-{% endif %}
+{% cache %}
+
+  {% if entry.quickLinks | length %}
+  <div id="block--quick-links">
+    <h3>Quick Links</h3>
+    {% include "modules/content/_quick-links" %}
+  </div>
+  {% endif %}
+
+{% endcache %}
