--- a/templates/modules/content/_block-news-events-home.twig
+++ b/templates/modules/content/_block-news-events-home.twig
@@ -2,7 +2,7 @@
   <h2>News</h2>
   {% set recentNews = craft.entries({
       'section' : 'newsEvents',
-      'type' : 'and, not event, not story',
+      'type' : 'and',
       'limit' : 6
   }).all() %}
   {% for entry in recentNews %}
