--- a/templates/singles/homepage/index.twig
+++ b/templates/singles/homepage/index.twig
@@ -35,7 +35,7 @@
     {% if image.caption %}<figcaption>{{ image.caption }}</figcaption>{% endif %}
   </figure>
 
-  <h1>Welcome to <span><strong>{{siteName}}</strong></span></h1>
+  <h1>Welcome to, <span><strong>{{siteName}}</strong></span></h1>
 </div>
 
 {% endif %}
@@ -86,5 +86,3 @@
   {{ include('modules/content/_block-process') }}
 
 {% endblock %}
-
-
