--- a/templates/modules/content/_block-location.twig
+++ b/templates/modules/content/_block-location.twig
@@ -2,7 +2,7 @@
   <div class="block--text">
     <div class="inner">
       <h3>Our Location</h3>
-      <h2>{{ entry.locationHeadline | nl2br  | typogrify }}</h2>
+      <h2>{{ entry.locationHeadline | typogrify }}</h2>
       <p>{{ entry.locationText | nl2br | typogrify }}</p>
     </div>
   </div>
