--- a/templates/modules/content/_block-location.twig
+++ b/templates/modules/content/_block-location.twig
@@ -1,7 +1,7 @@
 <section id="block--location">
   <div class="block--text">
     <div class="inner">
-      <h3>Our Location</h3>
+      <h3>Our Location.</h3>
       <h2>{{ entry.locationHeadline | typogrify }}</h2>
       <p>{{ entry.locationText | nl2br | typogrify }}</p>
     </div>
