--- a/templates/modules/content/_block-process.twig
+++ b/templates/modules/content/_block-process.twig
@@ -1,5 +1,5 @@
 <section id="block--process">
-  <p>Website Created in Collaboration with: {% if entry.collaborationLearnMore %}<a href="{{ entry.collaborationLearnMore }}" title="Read More About the Process">Read More About the Process</a>{% endif %}</p>
+  <p>Website Created in Collaboration with {% if entry.collaborationLearnMore %}<a href="{{ entry.collaborationLearnMore }}" title="Read More About the Process">Read More About the Process</a>{% endif %}</p>
 
   {%- set collaborations = entry.collaboration.limit(3).all() -%}
 
