--- a/templates/singles/directory/index.twig
+++ b/templates/singles/directory/index.twig
@@ -25,7 +25,7 @@
     {%- if entry.leadIn -%}<p>{{ entry.leadIn }}</p>{%- endif -%}
 
     <select id="jump">
-        <option placeholder>Jump to Department</option>
+        <option placeholder>Jump to Departments</option>
         {% for department in departments %}
         <option value="department--{{ department.slug }}">{{ department.title | typogrify }}</option>
         {% endfor %}
